Change sizes on game page and fix layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,8 +245,8 @@ footer {
 
 #game-container {
     max-width: 80rem;
-    width: 40rem;
-    height: 400px;
+    width: 50rem;
+    height: 500px;
     background-color: #2a4a85;
     display: flex;
     margin: auto;  
@@ -278,7 +278,7 @@ footer {
     pointer-events: none;
     background-image: url(../images/card-front.png);
     border: 4px solid;
-    font-size: 60px;
+    font-size: 80px;
 }
 
 .box-wrap {
@@ -290,12 +290,12 @@ footer {
 }
 
 #obj1, #obj2, #obj3 {
-    width: 140px;
-    height: 140px;
+    width: 180px;
+    height: 180px;
     background-image: url(../images/card-front.png);
     border-radius: 20px;
     border: 4px solid;
-    font-size: 60px;
+    font-size: 80px;
     font-family: 'gaegu', sans-serif;
     display: flex;
     align-items: center;
@@ -305,16 +305,17 @@ footer {
 }
 
 #point1, #point2, #point3 {
-    width: 140px;
-    height: 140px;
+    width: 180px;
+    height: 180px;
     background-color: white;
     border-radius: 20px;
     border: 4px dashed;
-    font-size: 40px;
+    font-size: 60px;
     font-family: 'gaegu', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
 }
 
 .your-score {
